Add Google Maps integration and UI improvements
Major Features:
- Google Maps integration with location markers
- Phone and Maps buttons on location cards
- New booking modal with Train/Book Court/Compete options
- Training bundles system with recurring sessions

UI Enhancements:
- Improved booking confirmation screen layout
- Better time slot spacing (hourly blocks)
- Wider court layout for <3 courts
- Enhanced Next button styling

Admin Features:
- Latitude/longitude fields for locations
- Phone number and Maps URL fields
- Bundle management system

Version: 1.1.30+61

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,9 @@
 
   <title>padel_booking</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Google Maps JavaScript API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMzLop7ENoJlwTOO-I0fe55yU-9X5gJ1E"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
